# OpenGLcourse

./: CMakeLists.txt
15112017/: CMakeLists.txt  main.cpp
Dz1/: CMakeLists.txt  main.cpp
Dz2/: CMakeLists.txt  main.cpp  vaofactory.cpp
Dz3/: CMakeLists.txt  Camera.cpp  Camera.h  MyCamera.cpp  MyCamera.h  Shader.h  main.cpp  vaofactory.h
MotokoGL/: CMakeLists.txt  MotokoError.h  MotokoGL.h  ShaderProg.cpp  ShaderProg.h  Tex.cpp  Tex.h  Vao.cpp  Vao.h  Window.cpp  Window.h  fatal.h  glheader.h
shaders/: bg.frag  dz1.frag  dz2.frag  dz2.vert  text.frag  text.vert
